# Qt_Programming-6

./: .gitignore
0_ConsoleApplication/: main.cpp
0_GUIApplication/: widget.cpp  widget.h  widget.ui
ConsoleApplication/: CMakeLists.txt
GuiApplication/: CMakeLists.txt  widget.ui
